--- a/Pages/Admin/TypeMesures/Index.cshtml
+++ b/Pages/Admin/TypeMesures/Index.cshtml
@@ -4,45 +4,236 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <div>
+        <h3 class="mb-1">Types de mesures</h3>
+        <small class="text-muted">Gestion et recherche des types de mesures</small>
+    </div>
+    <div class="d-flex gap-2">
+    <form method="post" asp-page="Index" enctype="multipart/form-data" asp-page-handler="ImportCsv" >
+        <input type="file" id="csvFileInput" name="csvFile" accept=".csv" style="display:none" />
+        <button type="submit" class="btn btn-inverse-success btn-fw" id="btnImportCsv"><i class="mdi mdi-file-import"></i> Import csv</button>
+        <a asp-page="Create" class="btn btn-inverse-primary btn-fw" data-bs-toggle="modal" data-bs-target="#createModal"><i class="icon-plus"></i> Nouveau type de mesure</a>
+        @* @if (TempData["Message"] != null)
+        {
+            <div class="alert alert-success">@TempData["Message"]</div>
+        } *@
+    </form>
+    </div>
+</div>
 
-<h1>Index</h1>
+<form method="get" class="mb-4">
+  <div class="row g-2 align-items-center">
+    <div class="col-md-2">
+      <input type="text" class="form-control form-control-sm" placeholder="Type de mesure" name="SearchTypeMesure" >
+    </div>
+    <div class="col-md-2">
+      <input type="text" class="form-control form-control-sm" placeholder="description" name="SearchDescription" >
+    </div>
+    <div class="col-md-2">
+      <input type="text" class="form-control form-control-sm" placeholder="Unités" name="SearchUnite" >
+    </div>
+    <div class="col-md-2">
+      <select class="form-select form-select-sm" name="Etat">
+        <option value="">État</option>
+        <option value="0" selected="@(Model.Etat == 0)">Non validé</option>
+        <option value="5" selected="@(Model.Etat == 5)">Validé</option>
+      </select>
+    </div>
+    <div class="col-md-2 d-flex align-items-end">
+      <button type="submit" class="btn btn-inverse-secondary btn-fw w-100">
+        <i class="icon-search"></i>
+      </button>
+    </div>
+  </div>
+</form>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+<hr />
+
+@if (Model.TypeMesures != null && Model.TypeMesures.Any()){
+    <div class="d-flex justify-content-end mb-2 gap-2">
+    <button type="button" class="btn btn-inverse-danger btn-fw" id="deleteAllBtn" >Tout supprimer</button>
+    <button type="button" class="btn btn-inverse-success btn-fw" id="validateAllBtn" >Valider tout</button>
+</div>
+
+<table class="table table-hover align-middle" >
+    <thead class="table-light">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TypeMesure[0].intitule)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TypeMesure[0].description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TypeMesure[0].etat)
-            </th>
-            <th></th>
+            <th scope="col" class="text-center"> <input type="checkbox" id="selectAll"></th>
+            <th class="text-start">Type de mesure</th>
+            <th class="text-center">Unité</th>
+            <th class="text-center">Description</th>
+            <th class="text-center">Etat</th>
+            <th class="text-center">Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.TypeMesure) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.intitule)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.etat)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.idTypeMesure">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.idTypeMesure">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.idTypeMesure">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.TypeMesures)
+        {
+            <tr>
+                <td class="text-center"><input type="checkbox" class="rowCheckbox" data-id="@item.idTypeMesure"/></td>
+                <td class="text-start"style="word-wrap: break-word; width: 250px;  white-space: normal;" >@item.intitule</td>
+                <td class="text-center">@item.Unite.symbole </td>
+                <td class="text-center">@item.description </td>
+                <td class="text-center">@item.etat</td>
+                <td class="text-center">
+                <button type="button" class="btn btn-inverse-warning btn-xs custom-width"  data-bs-toggle="modal"  data-bs-target="#editModal" data-id="@item.idTypeMesure" data-name="@item.intitule" data-description="@item.description" data-unitiesIds="@item.IdUnite"><i class="mdi mdi-pen"></i></button>
+                <button type="button" class="btn btn-inverse-danger btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="@item.idTypeMesure" data-name="@item.intitule"><i class="mdi mdi-delete"></i></button>
+                <button type="button" class="btn btn-inverse-success btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#validateModal"data-id="@item.idTypeMesure" data-name="@item.intitule"><i class="mdi mdi-check"></i></button>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<nav aria-label="Page navigation example" class="mt-3">
+    <ul class="pagination justify-content-end">
+        @if (Model.TypeMesures.HasPreviousPage)
+        {
+            <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.TypeMesures.PageIndex - 1)">Précédent</a></li>
+        }
+        @if (Model.TypeMesures.HasNextPage)
+        {
+            <li class="page-item"><a class="page-link" asp-route-pageIndex="@(Model.TypeMesures.PageIndex + 1)">Suivant</a></li>
+        }
+    </ul>
+</nav>
+
+}else { 
+    <p class="text-center text-muted fw-bold mt-3">
+    <i class="mdi mdi-alert-circle-outline"></i> Aucun type de mesure trouvé.</p>
+}
+<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+    <form method="post" asp-page-handler="Create">
+      <div class="modal-header">
+        <h5 class="modal-title" id="createModalLabel">Créer une nouveau type de mesure</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-2">
+            <input type="text" class="form-control form-control-sm" id="regionName" placeholder="Type de mesure" asp-for="TypeMesure.intitule">
+        </div>
+        <div class="mb-2">
+            <input type="text" class="form-control form-control-sm" id="typeMesureName" placeholder="description" asp-for="TypeMesure.description">
+        </div>
+        <div class="form-group">
+            <label for="exampleSelectGender">Unités</label> 
+            <select class="form-select" id="exampleSelectGender" asp-for="TypeMesure.IdUnite">
+                @foreach (var item in Model.UnitesValidees)
+                {
+                    <option value="@item.idUnite">@item.symbole</option>
+                }
+            </select>
+        </div>
+      </div>
+      <div class="modal-footer p-2">
+        <button type="button" class="btn btn-secondary btn" data-bs-dismiss="modal">Annuler</button>
+        <button type="submit" class="btn btn-primary btn" id="saveRegionBtn">Enregistrer</button>
+      </div>
+      <div asp-validation-summary="All" class="text-danger"></div>
+    </form>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" >
+    <form method="post" asp-page="Index" asp-page-handler="Update">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="editModalLabel">Modifier le type de mesure</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+        </div>
+        <div class="modal-body">
+            <input type="hidden" id="typeMesureId" asp-for="TypeMesure.idTypeMesure"/>
+            <div class="mb-2">
+                <label for="exampleSelectGender">Type de mesure</label> 
+                <input type="text" class="form-control form-control-sm" id="typeMesureName" asp-for="TypeMesure.intitule" placeholder="Nom">
+            </div>
+            <div class="mb-2">
+                <label for="exampleSelectGender">Description</label> 
+                <input type="text" class="form-control form-control-sm" id="typeMesureDescription" asp-for="TypeMesure.description" placeholder="Nom">
+            </div>
+            <div class="form-group">
+                <label for="exampleSelectGender">Unité</label> 
+                <select class="form-select" id="unityList" asp-for="TypeMesure.IdUnite">
+                    @foreach (var item in Model.UnitesValidees)
+                    {
+                        if (Model.TypeMesure != null && item.idUnite == Model.TypeMesure.IdUnite)
+                        {
+                            <option value="@item.idUnite" selected>@item.symbole</option>
+                        }
+                        else
+                        {
+                            <option value="@item.idUnite">@item.symbole</option>
+                        }
+                    }
+
+                </select>
+            </div>
+        </div>
+        <div class="modal-footer p-2">
+            <button type="button" class="btn btn-secondary btn" data-bs-dismiss="modal">Annuler</button>
+            <button type="submit" class="btn btn-primary btn" id="saveRegionBtn">Enregistrer</button>
+        </div>
+        </div>
+    </form>
+  </div>
+</div>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">   
+  <div class="modal-dialog modal-sm modal-dialog-centered">
+    <form method="post" asp-page-handler="Delete">  
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirmer la suppression</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" id="typeMesureId" name="id" />
+        <p>Voulez-vous vraiment supprimer le type de mesure "<strong id="typeMesureName"></strong>" de la liste?</p>
+      </div>
+      <div class="modal-footer p-2">
+        <button type="button" class="btn btn-inverse-danger btn-fw" data-bs-dismiss="modal">Non</button>
+        <button type="submit" class="btn btn-inverse-success btn-fw" id="confirmDeleteBtn">Oui</button>
+      </div>
+    </div>
+    </form>
+  </div>
+</div>
+
+<div class="modal fade" id="validateModal" tabindex="-1" aria-labelledby="validateModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm modal-dialog-centered">
+  <form method="post" asp-page-handler="Validate">  
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="validateModalLabel">Confirmer la validation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" id="typeMesureId" name="id" />
+        <p>Voulez-vous vraiment valider le type de mesure "<strong id="typeMesureName"></strong>" ?</p>
+      </div>
+      <div class="modal-footer p-2">
+        <button type="button" class="btn btn-inverse-danger btn-fw" data-bs-dismiss="modal">Non</button>
+        <button type="submit" class="btn btn-inverse-success btn-fw" id="confirmDeleteBtn">Oui</button>
+      </div>
+    </div>
+    </form>
+  </div>
+</div>
+
+@section Scripts {
+    <script src="~/assets/js/personal/typeMesure.js"></script>
+    <script>
+        $(document).ready(function () {
+            var showModal = '@ViewData["ShowCreateModal"]';
+            if (showModal === 'True') {
+                var myModal = new bootstrap.Modal(document.getElementById('createModal'));
+                myModal.show();
+            }
+        });
+    </script>
+}
