fix: update layout links after folder change

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -125,12 +125,12 @@
                         </a>
                         <div class="collapse" id="administration">
                             <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="/Categories">Catégories</a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/Infrastructures">Infrastructures</a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/TypeMesures">Mesures</a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/Unites">Unités</a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/TypeSignalements">Signalements</a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/TypeAlertes">Alertes</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/Admin/Categories">Catégories</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/Admin/Infrastructures">Infrastructures</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/Admin/TypeMesures">Mesures</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/Admin/Unites">Unités</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/Admin/TypeSignalements">Signalements</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/Admin/TypeAlertes">Alertes</a></li>
                             </ul>
                         </div>
                     </li>
