--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="~/assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" type="text/css" href="~/assets/js/select.dataTables.min.css">
     <link rel="stylesheet" href="~/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css">
 </head>
 <body>
     <div class="container-scroller">
@@ -291,6 +292,7 @@
         </div>
     </div>
     @RenderSection("Styles", required: false)
+    @await RenderSectionAsync("Scripts", required: false)
     <script src="~/assets/vendors/js/vendor.bundle.base.js"></script>
     <script src="~/assets/vendors/chart.js/chart.umd.js"></script>
     <script src="~/assets/vendors/datatables.net/jquery.dataTables.js"></script>
@@ -302,8 +304,8 @@
     <script src="~/assets/js/todolist.js"></script>
     <script src="~/assets/js/jquery.cookie.js" type="text/javascript"></script>
     <script src="~/assets/js/dashboard.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXB8P9tyMrKz5uSFFWdcI3F4mATlv0L0Q&callback=initMap" async defer></script>
+    @* <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvsxn8zUS2ZX_9Qv765_PsnwX53NP9wSk&callback=initMap" async defer></script> *@
+
 
 </body>
 </html>
