--- a/Pages/Regions/Index.cshtml
+++ b/Pages/Regions/Index.cshtml
@@ -5,7 +5,8 @@
     ViewData["Title"] = "Regions";
 }
 @section Styles {
-    <link rel="stylesheet" href="~/css/personal_style/Index.css" />
+    <link rel="stylesheet" href="~/assets/css/personal_style/Index.css" />
+    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> *@
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3">
@@ -18,10 +19,17 @@
         <input type="file" id="csvFileInput" name="csvFile" accept=".csv" style="display:none" />
         <button type="submit" class="btn btn-inverse-success btn-fw" id="btnImportCsv"><i class="mdi mdi-file-import"></i> Import csv</button>
         <a asp-page="Create" class="btn btn-inverse-primary btn-fw" data-bs-toggle="modal" data-bs-target="#createModal"><i class="icon-plus"></i> Nouvelle région</a>
-        @* @if (TempData["Message"] != null)
+        @if (TempData["Succes"] != null || TempData["Erreur"] != null)
         {
-            <div class="alert alert-success">@TempData["Message"]</div>
-        } *@
+          <div class="toast-container">
+            <div id="liveToast" class="toast-custom @(TempData["Succes"] != null ? "toast-success" : "toast-error")" role="alert">
+                <div class="toast-body">
+                    @Html.Raw(TempData["Succes"] ?? TempData["Erreur"])
+                </div>
+                <button type="button" class="toast-close" onclick="hideToast()">×</button>
+            </div>
+          </div>
+        }
     </form>
     </div>
 </div>
@@ -29,13 +37,7 @@
 <form method="get" class="mb-4">
   <div class="row g-2 align-items-center">
     <div class="col-md-2">
-      <input type="text" class="form-control form-control-sm" placeholder="Nom" name="SearchIntitule" value="@Model.SearchIntitule">
-    </div>
-    <div class="col-md-2">
-      <input type="number" step="any" class="form-control form-control-sm" placeholder="Latitude" name="Latitude" value="@(Model.Latitude)">
-    </div>
-    <div class="col-md-2">
-      <input type="number" step="any" class="form-control form-control-sm" placeholder="Longitude" name="Longitude" value="@(Model.Longitude)">
+      <input type="text" class="form-control form-control-sm" placeholder="Nom" name="SearchIntitule" value="@(Model.SearchIntitule)">
     </div>
     <div class="col-md-2">
       <input type="number" class="form-control form-control-sm" placeholder="Min pop." name="MinPopulation" value="@(Model.MinPopulation)">
@@ -46,13 +48,16 @@
     <div class="col-md-2">
       <select class="form-select form-select-sm" name="Etat">
         <option value="">État</option>
-        <option value="0" selected="@(Model.Etat == 0)">Non validé</option>
-        <option value="5" selected="@(Model.Etat == 5)">Validé</option>
+        <option value="0" selected="@(Model.Etat == 0 ? "selected" : null)">Non validé</option>
+        <option value="5" selected="@(Model.Etat == 5 ? "selected" : null)">Validé</option>
       </select>
     </div>
     <div class="col-md-2 d-flex align-items-end">
-      <button type="submit" class="btn btn-inverse-secondary btn-fw w-100">
+      <button type="submit" class="btn btn-inverse-secondary">
         <i class="icon-search"></i>
+      </button>
+      <button type="button" class="btn btn-inverse-secondary" style="margin-left:10px" onclick="window.location.href='/Regions'">
+        <i class="mdi mdi-refresh"></i>
       </button>
     </div>
   </div>
@@ -63,17 +68,14 @@
 <div class="d-flex justify-content-end mb-2 gap-2">
     <button type="button" class="btn btn-inverse-danger btn-fw" id="deleteAllBtn" >Tout supprimer</button>
     <button type="button" class="btn btn-inverse-success btn-fw" id="validateAllBtn" >Valider tout</button>
+    <a asp-page-handler="ExportAllPdf" class="btn btn-inverse-secondary btn-fw">Exporter PDF</a>
 </div>
-
 
 <table class="table table-hover align-middle" >
     <thead class="table-light">
         <tr>
             <th scope="col" class="text-center"> <input type="checkbox" id="selectAll"></th>
             <th class="text-start">Nom</th>
-            <th class="text-center">Latitude</th>
-            <th class="text-center">Longitude</th>
-            <th class="text-center">Géométrie</th>
             <th class="text-center">Population</th>
             <th class="text-center">État</th>
             <th class="text-center">Actions</th>
@@ -85,44 +87,70 @@
             <tr>
                 <td class="text-center"><input type="checkbox" class="rowCheckbox" data-id="@item.idRegion"/></td>
                 <td class="text-start"style="word-wrap: break-word; width: 250px;  white-space: normal;" >@item.intitule</td>
-                <td class="text-center">@item.latitude</td>
-                <td class="text-center">@item.longitude</td>
-                <td class="text-center" style="word-wrap: break-word; width: 5px;  white-space: normal;">@(item.geometrie != null ? $"({item.geometrie.X}, {item.geometrie.Y})" : "")</td>
                 <td class="text-center">@item.totalPopulationRegion</td>
-                <td class="text-center">@item.etat</td>
-                <td>
-                <button type="button" class="btn btn-inverse-warning btn-xs custom-width"  data-bs-toggle="modal"  data-bs-target="#editModal" data-id="@item.idRegion" data-name="@item.intitule" data-lat="@item.latitude" data-lng="@item.longitude" data-pop="@item.totalPopulationRegion" data-etat="@item.etat"><i class="mdi mdi-pen"></i></button>
-                <button type="button" class="btn btn-inverse-danger btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-delete"></i></button>
-                <button type="button" class="btn btn-inverse-success btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#validateModal"data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-check"></i></button>
-                @* <a asp-page="./Edit" asp-route-id="@item.idRegion"></a> *@
-                @* <a asp-page="./Details" asp-route-id="@item.idRegion"></a> *@
+                <td class="text-center"><span class="@item.EtatCssClass">@item.EtatText</span></td>
+                <td class="text-center">
+                <button type="button" style="@item.DisplayCrudButtons" class="btn btn-inverse-warning btn-xs custom-width" data-bs-toggle="modal"  data-bs-target="#editModal" data-id="@item.idRegion" data-name="@item.intitule" data-pop="@item.totalPopulationRegion" data-etat="@item.etat"><i class="mdi mdi-pen"></i></button>
+                <button type="button" style="@item.DisplayCrudButtons" class="btn btn-inverse-danger btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#deleteModal" data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-delete"></i></button>
+                <button type="button" style="@item.DisplayCrudButtons" class="btn btn-inverse-success btn-xs custom-width" data-bs-toggle="modal" data-bs-target="#validateModal" data-id="@item.idRegion" data-name="@item.intitule"><i class="mdi mdi-check"></i></button>
+                @{
+                  var districtCount = (item.Districts != null) ? item.Districts.Count() : 0;
+                }
+                <button type="button" style="@item.DisplayView" class="btn btn-inverse-primary btn-xs custom-width btn-view" data-bs-toggle="modal" data-bs-target="#viewModal" data-id="@item.idRegion" data-name="@item.intitule" data-pop="@item.totalPopulationRegion" data-districts="@districtCount"><i class="mdi mdi-eye"></i></button>
+                <a asp-page-handler="ExportPdf" asp-route-id="@item.idRegion" style="@item.DisplayView" class="btn btn-inverse-secondary btn-xs custom-width"><i class="mdi mdi-file-pdf-box"></i></a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+<br>
 
-<nav aria-label="Page navigation example" class="mt-3">
-    <ul class="pagination justify-content-end">
+<div class="d-flex justify-content-between align-items-center mb-4">
+<form method="get" class="d-flex align-items-center">
+    <div class="d-flex align-items-center"> 
+    <label for="pageSize" class="me-2">Afficher :</label> 
+    <select class="form-select d-inline-block w-auto"  id="pageSize"  name="PageSize" onchange="this.form.submit()">> 
+        <option value="1" selected="@(Model.PageSize == 1)">5</option>
+        <option value="15" selected="@(Model.PageSize == 15)">15</option>
+        <option value="101" selected="@(Model.PageSize == 101)">20</option>
+    </select> 
+    <span class="ms-2">par page</span>
+      <input type="number" id="customPageSize" name="PageSize" style="display:none;" min="1" max="100">
+    </div> 
+  <input type="hidden" name="pageIndex" value="1" />
+  <input type="hidden" name="SearchIntitule" value="@(Model.SearchIntitule)" />
+  <input type="hidden" name="MinPopulation" value="@(Model.MinPopulation)" />
+  <input type="hidden" name="MaxPopulation" value="@(Model.MaxPopulation)" />
+  <input type="hidden" name="Etat" value="@(Model.Etat)" />
+  </form>
+  <nav aria-label="Page navigation example" class="mt-3">
+      <ul class="pagination justify-content-end">
+        <li class="page-item disabled">
+            <span class="page-link">
+                Page @Model.Regions.PageIndex / @Model.Regions.TotalPages
+            </span>
+        </li>
         @if (Model.Regions.HasPreviousPage)
-    {
-         <li class="page-item">
-            <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex - 1)">Précédent</a>
-        </li>
-            }
-
-         @if (Model.Regions.HasNextPage)
-    {
-        <li class="page-item">
-            <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex + 1)">Suivant</a>
-        </li>
+        {
+            <li class="page-item">
+                <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex - 1)" asp-route-PageSize="@Model.PageSize" asp-route-SearchIntitule="@(Model.SearchIntitule)" asp-route-Etat="@(Model.Etat)">Précédent</a>
+            </li>
         }
-    </ul>
-</nav>
+        @if (Model.Regions.HasNextPage)
+        {
+            <li class="page-item">
+                <a class="page-link" asp-route-pageIndex="@(Model.Regions.PageIndex + 1)" asp-route-PageSize="@Model.PageSize" asp-route-SearchIntitule="@(Model.SearchIntitule)" asp-route-Etat="@(Model.Etat)">Suivant</a>
+            </li>
+        }
+      </ul>
+  </nav>
+</div>
 
-}else { <p class="text-center text-muted fw-bold mt-3">
-    <i class="mdi mdi-alert-circle-outline"></i> Aucune région trouvée
-</p> }
+}else { 
+  <p class="text-center text-muted fw-bold mt-3">
+    <i class="mdi mdi-alert-circle-outline"></i> Aucune région trouvée</p> 
+}
+
 <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -136,17 +164,7 @@
             <input type="text" class="form-control form-control-sm" id="regionName" placeholder="Nom" asp-for="Region.intitule">
         </div>
         <div class="mb-2">
-            <button type="button" id="btnGetLocation" class="btn btn-inverse-primary btn-fw form-control" > <i class="mdi mdi-crosshairs-gps"> Obtenir ma position</i></button>
-        </div>
-        <div id="map" style="height: 300px;"></div>
-        <div class="mb-2">
-            <input type="number" id="Region_latitude"  class="form-control form-control-sm" asp-for="Region.latitude" step="any" placeholder="Latitude">
-        </div>
-        <div class="mb-2">
-            <input type="number" id="Region_longitude" class="form-control form-control-sm" asp-for="Region.longitude" step="any"  placeholder="Longitude">
-        </div>
-        <div class="mb-2">
-            <input type="number"  class="form-control form-control-sm" asp-for="Region.totalPopulationRegion" step="any"  placeholder="Nombre de population">
+            <input type="number"  class="form-control form-control-sm" asp-for="Region.totalPopulationRegion" step="any"  placeholder="Nombre total de population">
         </div>
       </div>
       <div class="modal-footer p-2">
@@ -161,7 +179,7 @@
 
 <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm modal-dialog-centered">
-  <form method="post" asp-page-handler="Update">
+  <form method="post" asp-page="Index" asp-page-handler="Update">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="editModalLabel">Modifier la région</h5>
@@ -171,12 +189,6 @@
         <input type="hidden" id="regionId" asp-for="Region.idRegion" />
         <div class="mb-2">
             <input type="text" class="form-control form-control-sm" id="regionName" asp-for="Region.intitule" placeholder="Nom">
-        </div>
-        <div class="mb-2">
-            <input type="number" class="form-control form-control-sm" id="regionLat" asp-for="Region.latitude" step="any" placeholder="Latitude">
-        </div>
-        <div class="mb-2">
-            <input type="number" class="form-control form-control-sm" id="regionLng" asp-for="Region.longitude" step="any" placeholder="Longitude">
         </div>
         <div class="mb-2">
             <input type="number" class="form-control form-control-sm" id="regionPop" asp-for="Region.totalPopulationRegion" step="any" placeholder="Nombre de population">
@@ -193,7 +205,7 @@
 
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">   
   <div class="modal-dialog modal-sm modal-dialog-centered">
-    <form method="post" asp-page-handler="Delete">  
+    <form method="post" asp-page="Index" asp-page-handler="Delete">  
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="deleteModalLabel">Confirmer la suppression</h5>
@@ -214,7 +226,7 @@
 
 <div class="modal fade" id="validateModal" tabindex="-1" aria-labelledby="validateModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm modal-dialog-centered">
-  <form method="post" asp-page-handler="Validate">  
+  <form method="post" asp-page="Index" asp-page-handler="Validate">  
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="validateModalLabel">Confirmer la validation</h5>
@@ -233,8 +245,36 @@
   </div>
 </div>
 
+<div class="modal fade" id="viewModal" tabindex="-1" aria-labelledby="viewModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="viewModalLabel">Détails de la région</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row mb-2">
+          <div class="col-5 fw-bold">Nom :</div>
+          <div class="col-7" id="regionName"></div>
+        </div>
+        <div class="row mb-2">
+          <div class="col-6 fw-bold">Nombre total de population :</div>
+          <div class="col-6" id="regionPop"></div>
+        </div>
+        <div class="row mb-2"> 
+          <div class="col-6 fw-bold">Nombre total de districts :</div> 
+          <div class="col-6" id="regionDistricts"></div> </div>
+        </div>
+      <div class="modal-footer p-2">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 @section Scripts {
-    <script src="~/assets/js/personal/region.js"></script>
+    <script src="~/assets/js/personal/region.js" ></script>
+    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> *@
     <script>
         $(document).ready(function () {
             var showModal = '@ViewData["ShowCreateModal"]';
