--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -295,15 +295,14 @@
     @await RenderSectionAsync("Scripts", required: false)
     <script src="~/assets/vendors/js/vendor.bundle.base.js"></script>
     <script src="~/assets/vendors/chart.js/chart.umd.js"></script>
-    <script src="~/assets/vendors/datatables.net/jquery.dataTables.js"></script>
-    <script src="~/assets/vendors/datatables.net-bs5/dataTables.bootstrap5.js"></script>
-    <script src="~/assets/js/dataTables.select.min.js"></script>
     <script src="~/assets/js/off-canvas.js"></script>
     <script src="~/assets/js/template.js"></script>
     <script src="~/assets/js/settings.js"></script>
     <script src="~/assets/js/todolist.js"></script>
     <script src="~/assets/js/jquery.cookie.js" type="text/javascript"></script>
     <script src="~/assets/js/dashboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
     @* <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvsxn8zUS2ZX_9Qv765_PsnwX53NP9wSk&callback=initMap" async defer></script> *@
 
 
