--- a/Pages/Utilisateurs/Index.cshtml
+++ b/Pages/Utilisateurs/Index.cshtml
@@ -5,17 +5,14 @@
     ViewData["Title"] = "Index";
     Layout = ViewData["Layout"]?.ToString();
 }
-<style>
+@* <style>
     body {
         background-image: url('@ViewData["BackgroundImage"]');
     }
-</style>
+</style> *@
 <div class="container-fluid page-body-wrapper full-page-wrapper">
     <div class="content-wrapper d-flex align-items-center auth px-0"  >
         <div class="row w-100 mx-0">
-        <div class="login-header">
-            <h1 class="animated-text">Bienvenue sur notre plateforme</h1>
-        </div>
         <div class="col-lg-4 mx-auto" >
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
             <div class="brand-logo" style="text-align:center">
